
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint32 ;
typedef int STREAM ;


 int SEC_ENCRYPT ;
 int SEC_LOGON_INFO ;
 scalar_t__ encryption ;
 int out_uint16_le (int ,int) ;
 int out_uint32 (int ,int ) ;
 int out_uint32_le (int ,int) ;
 int rdp_out_unistr (int ,char*,int) ;
 int s_mark_end (int ) ;
 int sec_init (int,int) ;
 int sec_send (int ,int) ;
 int strlen (char*) ;

__attribute__((used)) static void
rdp_send_logon_info(uint32 flags, char *domain, char *user,
      char *password, char *program, char *directory)
{
 int len_domain = 2 * strlen(domain);
 int len_user = 2 * strlen(user);
 int len_password = 2 * strlen(password);
 int len_program = 2 * strlen(program);
 int len_directory = 2 * strlen(directory);
 uint32 sec_flags = encryption ? (SEC_LOGON_INFO | SEC_ENCRYPT) : SEC_LOGON_INFO;
 STREAM s;

 s = sec_init(sec_flags, 18 + len_domain + len_user + len_password
       + len_program + len_directory + 10);

 out_uint32(s, 0);
 out_uint32_le(s, flags);
 out_uint16_le(s, len_domain);
 out_uint16_le(s, len_user);
 out_uint16_le(s, len_password);
 out_uint16_le(s, len_program);
 out_uint16_le(s, len_directory);
 rdp_out_unistr(s, domain, len_domain);
 rdp_out_unistr(s, user, len_user);
 rdp_out_unistr(s, password, len_password);
 rdp_out_unistr(s, program, len_program);
 rdp_out_unistr(s, directory, len_directory);

 s_mark_end(s);
 sec_send(s, sec_flags);
}
